@@ -8,6 +8,7 @@ WinMerge 2.13.8
   Move InnoSetup translations to /Translations/InnoSetup (r6759)
   Move Readme translations to /Translations/Docs/Readme (r6764)
   Create translated ShellExtension RC files from PO files (#2794514)
+  Allow editing context line count in patch creator (#2092180)
   Bugfix: Didn't show correct EOL chars if whitespace chars were turned off
     and again on (#2791402)
   Bugfix: Wrong whitespace character highlighted in difference (#2795599)
